# Tarea-2-DatosII

./: CMakeLists.txt  README.md  Time.h  main.cpp
Data Structures/BinaryTree/: BinaryTree.cpp  BinaryTree.h
Data Structures/LinkedList/: LinkedList.cpp  LinkedList.h
Graficos/: GraphWidget.cpp  GraphWidget.h
Sorting Algorithms/: BubbleSort.cpp  MergeSort.cpp  SelectionSort.cpp
Sorting Algorithms/Headers/: BubbleSort.h  MergeSort.h  SelectionSort.h
